# apple-take-home-assignment

./: .gitignore  CLAUDE.md  PROMPT_FINAL.md  PROMPT_UPDATE.md  README.md
docs/: SETUP_GUIDE.md  WORKFLOW.md  qwen3-0.6b-analysis.md
eval/: .env.example  README.md  common.py  compare_base_vs_finetuned.py  eval_all.py  eval_and_analysis.py  prepare_dataset.py  prepare_test_set.py  pyproject.toml  start_model.sh
eval/results/: base_results.csv  finetune-result.csv  finetune_results.csv
finetuning/: .env.example  SETUP.md  SYNTHETIC_DATA_EXPERIMENT.md  check_data.py  check_data_lengths.py  create_datasets.py  export_gguf.py  export_gguf_llamacpp.py  generate_synthetic_data.py  prepare_data.py  pyproject.toml  setup.sh  train_grpo.py  train_progressive.py  train_sft.py  train_sft_base.py  verify_eos_token.py
finetuning/config/: grpo.yaml  prompt_loader.py  prompts.yaml  training.yaml
finetuning/configs/: sft_16k.yaml  sft_32k.yaml  sft_8k.yaml  train.yaml
finetuning/data_analysis/: README.md  analyze_stats.py  convert_to_base_format.py  dataset_analysis.ipynb  download_dataset.py  error_analysis.ipynb  evaluate_dataset_with_judge.py  govreport_eda.ipynb  inference_test_gguf.ipynb  model_analysis.ipynb  show_examples.py
finetuning/data_analysis/.ipynb_checkpoints/: convert_govreport_to_base_format-checkpoint.py  error_analysis-checkpoint.ipynb  full_dataset_analysis-checkpoint.ipynb  inference_test_gguf-checkpoint.ipynb
finetuning/synthetic/: generate_synthetic_data.py
inference-server/: .env.example  Dockerfile  README.md  docker-compose.yaml  start.sh
inference-server-eval/: README.md  download_models.sh  setup_servers.sh
inference-server-judge/: README.md  docker-compose.yaml  setup_judge.sh
models/: download_models.sh
serving/: Dockerfile  Makefile  docker-compose.yaml  eval_judge_results.json  eval_results.json  eval_rouge_results.json  pyproject.toml
serving/api_service/: main.py  model_loader.py
serving/api_service/agents/: graph.py  prompts.py  state.py
serving/api_service/agents/nodes/: chunk_document.py  direct_summarize.py  extract_facts.py  merge_facts.py  summarize_chunks.py  summarize_facts.py
serving/eval/: .env.example  README.md  common.py  eval_adapter.py  eval_all.py  eval_dataset.json  eval_judge.py  eval_rouge.py  prepare_dataset.py
serving/fe/: Dockerfile  app.py  pyproject.toml
serving/tests/: test_e2e.py  test_routing.py
