[project]
name = "summarization-service"
version = "0.1.0"
description = "Agentic summarization pipeline for Qwen3-0.6B on GovReport"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "huggingface-hub>=0.25.0",
    "sentence-transformers>=3.0.0",
    "datasets>=3.0.0",
    "rouge-score>=0.1.2",
    "httpx>=0.27.0",
    "matplotlib>=3.10.8",
]

[tool.hatch.build.targets.wheel]
packages = ["api_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
