[project]
name = "summarization-service"
version = "0.1.0"
description = "Agentic summarization pipeline for Qwen3-0.6B on GovReport"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "opentelemetry-api>=1.0",
    "opentelemetry-sdk>=1.0",
    "opentelemetry-exporter-otlp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["api_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
