[project]
name = "summarization-demo"
version = "0.1.0"
description = "Gradio demo for the summarization pipeline"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
